Updated GitHub Pages link in README

--- a/README
+++ b/README
@@ -9,4 +9,4 @@ Kristopher Yu
 John Sanli
 Robert Radzville
 
-GitHub Pages Link: https://ivalmart.github.io/Black-Friday-One-Button/?Black-Friday-One-Button
+GitHub Pages Link: https://ivalmart.github.io/Black-Friday-One-Button/?BlackFriday
